<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <EditText
        android:id="@+id/textout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Send" />

    <Button
        android:id="@+id/get_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_ip" />

    <Button
        android:id="@+id/set_server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_set_server" />

    <Button
        android:id="@+id/show_orientation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_orientation" />

    <Button
        android:id="@+id/connect_server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_server" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:text="TextView" />

</LinearLayout>